--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "graphql": "^16.9.0",
     "prisma": "^5.19.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "type-graphql": "^2.0.0-rc.2",
-    "typegraphql-nestjs": "^0.7.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
