feat: create crypto service

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.19.0",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.9.0",
     "prisma": "^5.19.0",
     "reflect-metadata": "^0.2.0",
@@ -42,6 +43,7 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "@types/bcrypt": "^5.0.2",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
