feat: implement login

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ DATABASE_URL="mysql://root:root@localhost:3306/financas"
 
 PORT=4000
 
-CRYPT_KEY="SUPER_SECRET_KEY"
+JWT_SECRET="SUPER_SECRET_KEY"
+EXPIRES_IN="1h"
